--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ matrix:
         pip: false
         directories:
           - $HOME/Library/Caches/pip
+    - python: 2.7.14-r2
   allow_failures:
     - python: "nightly"
 
@@ -83,6 +84,7 @@ install:
         pytest-rerunfailures \
         pytest-timeout \
         pytest-xdist
+    pip install -r requirements.txt
 before_script:
   - |
     if [[ $TRAVIS_OS_NAME != 'osx' ]]; then
